# src/swagger.json
@@ -1,7 +1,7 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "Contacts API",
+    "title": "Contacts API by Baron",
     "version": "1.0.0",
     "description": "This is an API for storing and retrieving information about contacts. These contacts are to be stored in a MongoDB database and all interaction happen through the API. The API can be used by any frontend."
   },
@@ -25,7 +25,7 @@
         }
       }
     },
-    "/contacts/": {
+    "/contacts": {
       "get": {
         "tags": [
           "Contacts"
@@ -141,11 +141,30 @@
           {
             "name": "body",
             "in": "body",
+            "description": "Updated contact fields",
+            "required": true,
             "schema": {
               "type": "object",
               "properties": {
-                "_id": {
-                  "example": "any"
+                "firstName": {
+                  "type": "string",
+                  "example": "Jane"
+                },
+                "lastName": {
+                  "type": "string",
+                  "example": "Doe"
+                },
+                "email": {
+                  "type": "string",
+                  "example": "jane@domain.com"
+                },
+                "favoriteColor": {
+                  "type": "string",
+                  "example": "blue"
+                },
+                "birthday": {
+                  "type": "string",
+                  "example": "Feb 2"
                 }
               }
             }
